Fix sidebar z-index

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,7 +17,7 @@ body {
   top: 0;
   bottom: 0;
   left: 0;
-  z-index: 100;
+  z-index: 110;
   /* Behind the navbar */
   padding: 48px 0 0;
   /* Height of navbar */
